--- a/Routingtemplatedemo/Routingtemplatedemo.csproj
+++ b/Routingtemplatedemo/Routingtemplatedemo.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.10" />
+    <PackageReference Include="MySql.Data" Version="8.0.23" />
   </ItemGroup>
 
 </Project>
